# 2024.1-SIGAA

./: README.md  index.html
Documentacao/: mkdocs.yml  pyproject.toml
Documentacao/docs/: index.md
Documentacao/docs/Aplicativos/: Template_analise  sigaa-unb.md
Documentacao/site/: 404.html  index.html  search.html
Documentacao/site/Sites/Template_analise/: index.html
Documentacao/site/Sites/analise_sigaa/: index.html
Documentacao/site/analise-requisitos/teste/: index.html
Documentacao/site/apresentacao/teste2/: index.html
Documentacao/site/atas/Ata_03/: index.html
Documentacao/site/atas/ata1/: index.html
Documentacao/site/atas/ata2/: index.html
Documentacao/site/planejamento/teste3/: index.html
Documentacao/site/search/: search_index.json
Planeamento/: Ferramentas.md
Planejamento/: Cronograma.md  Ferramentas.md
Reunioes/: Ata01.md  Ata_01  Ata_02.md  Ata_03  Ata_03.md  Ata_04.md
assets/: heatmap
atas/: ata1.md  ata2.md
docs/: README.md  _coverpage.md  _sidebar.md  index.html  sidebar.md
docs/Cenários/: cenarios.md
docs/EntregaFinal/: ArtefatosCriados.md  CicloDeVidaSelecionado.md  Cronogramas.md  ExecucaoProjeto.md  FacilidadesDificuldades.md  FerramentasUtilizadas.md  PlanejamentoEntregaFinal.md  ResultadosAlcancados.md  SinteseApresentacoes.md  SinteseAvaliacoes.md  SinteseTecnicas.md  SinteseVerificações.md  SiteSelecionado.md  TecnicasUtilizadas.md
docs/Entregas/: Entrega01.md  Entrega02.md  Entrega03.md  Entrega04.md  Entrega05.md  Entrega06.1.md  Entrega07.md  Entrega5.md  Entrega6.1.md  Entrega6.2.md  Entrega8.md  (+1 more)
(+266 files in other folders)
