[tool.poetry]
name = "documentacao"
version = "0.1.0"
description = "Documentação do grupo 2 da disciplina de IHC"
authors = ["Pedro Augusto Dourado Izarias <pedroaugustoizarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.5.3"
mkdocs-dracula-theme = "^1.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
